--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -20,8 +20,8 @@
           <a href class="dropdown-toggle" data-toggle="dropdown">{{user.username | uppercase}} <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href ng-click="$state.go('index.manage')">MANAGE MOVIES</a></li>
-            <!-- <li><a href="single-post.html">SINGLE POST</a></li> -->
-            <!-- <li><a href="portfolio.html">PORTFOLIO</a></li> -->
+            <li><a href>ACCOUNT INFO</a></li>
+            <li><a href>LOGOUT</a></li>
             <!-- <li><a href="single-project.html">SINGLE PROJECT</a></li> -->
           </ul>
         </li>
