--- a/angular/views/movie-detail.html
+++ b/angular/views/movie-detail.html
@@ -54,7 +54,7 @@
         <form id="comment-form" class="comment-form" method='post'>
           <textarea class="comment-form__text" placeholder='Add you comment here'></textarea>
           <label class="comment-form__info">250 characters left</label>
-          <button type='submit' class="btn btn-md btn--danger comment-form__btn">add comment</button>
+          <button ng-click="addComment()" class="btn btn-md btn--danger comment-form__btn">add comment</button>
         </form>
         <div class="comment-sets">
           <div class="comment">
