--- a/angular/views/main.html
+++ b/angular/views/main.html
@@ -21,7 +21,7 @@
           <ul class="dropdown-menu">
             <li><a href ng-click="$state.go('index.manage')">MANAGE MOVIES</a></li>
             <li><a href>ACCOUNT INFO</a></li>
-            <li><a href>LOGOUT</a></li>
+            <li><a href ng-click="logOut()">LOGOUT</a></li>
             <!-- <li><a href="single-project.html">SINGLE PROJECT</a></li> -->
           </ul>
         </li>
