--- a/angular/views/manage-movie.html
+++ b/angular/views/manage-movie.html
@@ -22,7 +22,7 @@
                         <a href ng-click="deleteMovie(user.id, movie.id)" class="rates__obj-name">DELETE</a>
                       </td>
                       <td class="rates__vote">
-                        <a href class="rates__obj-name">EDIT</a>
+                        <a href ng-click="openMovieModal(movie)" class="rates__obj-name">EDIT</a>
                       </td>
                     </tr>
                     <!-- <tr class="rates rates--top">
