--- a/angular/styles/global.scss
+++ b/angular/styles/global.scss
@@ -1,12 +1,12 @@
 .navbar {
   min-height: 100px;
-  transition: all 0.3s;
+  transition: all 0.2s;
   .navbar-header .navbar-brand {
-    transition: all 0.3s;
+    transition: all 0.2s;
     img {
       width: 70px;
       height: 70px;
-      transition: all 0.3s;
+      transition: all 0.2s;
     }
     &.navbar-brand-name {
       padding-top: 23px;
@@ -17,16 +17,20 @@
   }
   .navbar-collapse {
     padding-top: 20px;
-    transition: all 0.3s;
+    transition: all 0.2s;
     a {
-      transition: all 0.3s;
+      transition: all 0.2s;
     }
     .caret {
       border-top: 8px dashed;
       border-top: 8px solid \9;
       border-right: 8px solid transparent;
       border-left: 8px solid transparent;
-      transition: all 0.3s;
+      transition: all 0.2s;
+    }
+    .dropdown-menu li a {
+      font-size: 16px;
+      transition: all 0.2s;
     }
   }
   &.smaller {
@@ -34,8 +38,8 @@
     .navbar-header .navbar-brand {
       font-size: 25px;
       img {
-        width: 35px;
-        height: 35px;
+        width: 40px;
+        height: 40px;
       }
       &.navbar-brand-name {
         padding-top: 10px;
@@ -47,13 +51,16 @@
       padding-top: 0;
       a {
         font-size: 12px;
-        transition: all 0.3s;
+        transition: all 0.2s;
       }
       .caret {
         border-top: 4px dashed;
         border-top: 4px solid \9;
         border-right: 4px solid transparent;
         border-left: 4px solid transparent;
+      }
+      .dropdown-menu li a {
+        font-size: 12px;
       }
     }
   }
