--- a/angular/styles/global.scss
+++ b/angular/styles/global.scss
@@ -65,3 +65,14 @@
     }
   }
 }
+
+#preloader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  background: #000000;
+  backface-visibility: hidden;
+}
