--- a/angular/styles/app.scss
+++ b/angular/styles/app.scss
@@ -7,6 +7,7 @@
 @import "settings";
 @import "gozha-nav";
 @import "global";
+@import "preloader";
 @font-face {
     font-family: Kaushan Script;
     src: url(/../fonts/KaushanScript-Regular.otf);
