--- a/angular/views/home.html
+++ b/angular/views/home.html
@@ -130,7 +130,7 @@
   <div class="col-sm-12">
     <div class="row">
       <div ng-repeat="rows in chunkedMovies" ng-class-odd="'movie--test--left'" ng-class-even="'movie--test--right'" class="col-sm-8 col-md-9">
-        <div ng-repeat="movie in rows | filter: query" class="movie movie--test movie--test--dark">
+        <div ng-repeat="movie in rows |orderBy: date_released | filter: query" class="movie movie--test movie--test--dark">
           <div class="movie__images">
             <a href ng-click="viewMovieDetail(movie.id)" class="movie-beta__link">
               <div ng-style="{'background': 'url(' + movie.poster +') no-repeat center center', 'background-size': 'cover', 'height': '212px'}"></div>
