--- a/angular/views/movie-detail.html
+++ b/angular/views/movie-detail.html
@@ -11,7 +11,8 @@
             <!-- <img src="{{movieDetail.poster}}"> -->
           </div>
           <div class="movie__rate">Your vote:
-            <div id='score' class="score"></div>
+            <span ng-click="addRating()" uib-rating ng-model="movieDetail.points" max="max" read-only="isReadonly" on-hover="hoveringOver(value)" on-leave="overStar = null" titles="['one','two','three']" aria-labelledby="default-rating"></span>
+            <span class="label" ng-class="{'label-warning': percent<30, 'label-info': percent>=30 && percent<70, 'label-success': percent>=70}" ng-show="overStar && !isReadonly">{{percent}}%</span>
           </div>
         </div>
         <div class="col-sm-6 col-md-8">
